I think I've fixed the image issue. need to test it on mobile

--- a/styles/output-styles.css
+++ b/styles/output-styles.css
@@ -224,6 +224,9 @@
   .max-w-\[25\%\] {
     max-width: 25%;
   }
+  .max-w-\[35\%\] {
+    max-width: 35%;
+  }
   .max-w-sm {
     max-width: var(--container-sm);
   }
@@ -232,6 +235,9 @@
   }
   .border-collapse {
     border-collapse: collapse;
+  }
+  .transform {
+    transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
   }
   .animate-bounce {
     animation: var(--animate-bounce);
@@ -300,6 +306,66 @@
       }
     }
   }
+  .sm\:max-w-\[15\%\] {
+    @media (width >= 40rem) {
+      max-width: 15%;
+    }
+  }
+  .sm\:max-w-\[25\%\] {
+    @media (width >= 40rem) {
+      max-width: 25%;
+    }
+  }
+  .sm\:max-w-\[35\%\] {
+    @media (width >= 40rem) {
+      max-width: 35%;
+    }
+  }
+  .sm\:max-w-\[60\%\] {
+    @media (width >= 40rem) {
+      max-width: 60%;
+    }
+  }
+  .md\:max-w-\[15\%\] {
+    @media (width >= 48rem) {
+      max-width: 15%;
+    }
+  }
+  .md\:max-w-\[25\%\] {
+    @media (width >= 48rem) {
+      max-width: 25%;
+    }
+  }
+  .md\:max-w-\[50\%\] {
+    @media (width >= 48rem) {
+      max-width: 50%;
+    }
+  }
+  .lg\:max-w-\[15\%\] {
+    @media (width >= 64rem) {
+      max-width: 15%;
+    }
+  }
+}
+@property --tw-rotate-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-rotate-y {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-rotate-z {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-skew-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-skew-y {
+  syntax: "*";
+  inherits: false;
 }
 @property --tw-border-style {
   syntax: "*";
@@ -324,6 +390,11 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-rotate-x: initial;
+      --tw-rotate-y: initial;
+      --tw-rotate-z: initial;
+      --tw-skew-x: initial;
+      --tw-skew-y: initial;
       --tw-border-style: solid;
       --tw-outline-style: solid;
     }
